--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,css,md}\""
+    "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,css,md}\"",
+    "postinstall": "npm install --prefix ./node_modules/gigaverse-sdk && npm run build --prefix ./node_modules/gigaverse-sdk && npm install --prefix ./node_modules/gigaverse-engine && npm run build --prefix ./node_modules/gigaverse-engine"
   },
   "author": "KZMKBL",
   "license": "MIT",
